fix input date on mobile safari

--- a/scss/imports/pages/_home.scss
+++ b/scss/imports/pages/_home.scss
@@ -567,7 +567,15 @@
                         &::placeholder{
                             @include text(14px,mr,30px,$white-cl,none)
                         }
-    
+                    }
+
+                    #date,#time{
+                        display:block;
+  
+                        /* Solution 1 */
+                        -webkit-appearance: textfield;
+                        -moz-appearance: textfield;
+                        min-width: 100%;
                     }
                     
                     #date::-webkit-calendar-picker-indicator{
